# alphasearch

./: .env.example  .gitignore  INTEGRATIONS.md  Makefile  README.md  _recover_integrations.py  agent.py  app.py  engine.py  index.py  menubar.py  pyproject.toml  requirements.txt  search_open.py  service.py  spotlight.py  start.command  watch.py
.cursor/: mcp.json
alphasearch/: __init__.py  config.py  models.py  scanner.py
alphasearch/api/: __init__.py  app.py
alphasearch/chunkers/: __init__.py  image.py  pdf.py
alphasearch/cli/: __init__.py  download_model.py  index_data.py  main.py  reset_index.py  search.py
alphasearch/db/: __init__.py  lancedb_store.py
alphasearch/embeddings/: __init__.py  clip.py  factory.py  protocol.py  qwen_vl.py
alphasearch/frontend/: __init__.py  adapter.py  defaults.py
alphasearch/ingestion/: __init__.py  pipeline.py  scanner.py
alphasearch/ingestion/chunkers/: __init__.py  image.py  pdf.py
alphasearch/integrations/: __init__.py  captur.py  cognee.py  config.py  cosine.py  exo.py  hub.py  overmind.py
alphasearch/mcp/: __init__.py  server.py
alphasearch/search/: __init__.py  mapping.py  models.py  service.py
alphasearch/utils/: __init__.py  formatting.py  hashing.py  mime.py
integrations/: __init__.py  captur.py  cognee.py
scripts/: bootstrap.sh  download_model.py  index_data.py  reset_index.py  search.py  setup_interactive.sh
src/alphasearch/: __init__.py  api.py  config.py  embed.py  mapping.py  models.py  service.py  store.py
tests/: test_embeddings.py  test_frontend_adapter.py  test_mcp.py  test_search.py  test_service_api.py
