[project]
name = "alphasearch"
version = "0.1.0"
description = "Semantic search over LanceDB embeddings via LM Studio."
readme = "README.md"
authors = [
    { name = "RobbenRibery", email = "rundong.liu@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "lancedb>=0.33.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
alphasearch-api = "alphasearch.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
